# SysLoggerCpp

./: CMakeLists.txt  README.md  SysLogger.cpp
examples/: SyslogExample.cpp
examples/etc/logrotate.d/: custom-syslog
examples/etc/rsyslog.d/: 99-custom-syslog.conf
include/: SysLogger.hpp
